n/a - April 12, 2004

	* Added a automatic modules loading script to the contrib directory
	  submitted by Zack
	* Edited mountkernfs, so that if you can mount sysfs on /sys, it will
	  be mounted at boottime.  Should not affect 2.4 systems
	* Since all entries are added to /etc/mtab, we should not require
	  the NO_FS variable.  It has been removed from mountfs

2.0.3 - April 8, 2004

	* Updated cleanfs, so it can create devices.  Supplied by Zack
	* Tagged as 2.0.3

n/a - March 31, 2004

	* Changed "Press Enter" on unknown error to white
	* Moved S10swap to S20swap.  When udev is added, it has to be
	  ran before swap is setup

n/a - March 29, 2004

	* Fixed the rc5.d symlink for ntp so it creates S26ntp instead
	  of S26npt
	* Moved S20mountkernfs to S00mountkernfs in rcsysinit.d.  Will help in
	  the addition of udev in the future.

n/a - March 27, 2004

	* Changed gdm path from hardcoded to program name.  There are 2 spots
	  gnome can be installed

n/a - March 26, 2004

	* Updated fam daemon script.  It now uses the famd daemon instead of fam

n/a - March 24, 2004

	* Removed mount command out of nfs.  the netfs script already handles
	  this

2.0.2 - March 24, 2004

	* Edited cleanfs to solve a problem.  [if /tmp does not exist, it
	  could run the find command on the root filesystem]
	* Tagged as 2.0.2

2.0.1 - March 24, 2004

	* Found typo in BLFS MySQL Script.
	* Tagged as 2.0.1

2.0.0 - March 23, 2004

	* Tagged as 2.0.0, no changes from 2.0.0-pre2

2.0.0-pre2 - March 23, 2004

	* Cleaned the /tmp directory on bootup.  find command supplied by Zack
	* Added a script which can automatically create files and directories
	  on startup.  [Handles files/directories, permissions, and user/group].
	  Created by Zack
	* Added blfs/init.d/fam script
	* Tagged as 2.0.0-pre2

n/a - March 20, 2004

	* Added create-service-dir target and removed from create-dirs
	* Changed service script install targets to use
	  create-service-dir